# deepenc

./: .gitignore  FRAMEWORK_SUMMARY.md  INSTALL.md  MANIFEST.in  Makefile  README.md  __init__.py  __main__.py  benchmark.py  bootstrap.py  config.py  pyproject.toml  requirements.txt  setup.py  test_cli.py  test_framework.py  test_full_build.py
.cursor/rules/: cli-development.mdc  encryption-framework.mdc  project-structure.mdc  python-coding-standards.mdc  testing-documentation.mdc
builders/: __init__.py  packager.py  project_builder.py
cli/: __init__.py  commands.py  main.py
core/: __init__.py  auth.py  crypto.py
deepenc/: __init__.py  __main__.py  bootstrap.py  config.py
deepenc/builders/: __init__.py  packager.py  project_builder.py
deepenc/cli/: __init__.py  commands.py  main.py
deepenc/core/: __init__.py  auth.py  crypto.py  errors.py  hexie_auth_loader.py
deepenc/discovery/: __init__.py  filters.py  scanner.py
deepenc/loaders/: __init__.py  module_loader.py  onnx_loader.py
deepenc/utils/: __init__.py  build_output.py  fs.py  logger.py
discovery/: __init__.py  filters.py  scanner.py
docs/: README.md  api.md  architecture.md  best_practices.md  configuration.md  index.md  module_loader_tutorial.md  quickstart.md  zip_generation.md
examples/: advanced_usage.py  basic_usage.py
loaders/: __init__.py  module_loader.py  onnx_loader.py
utils/: __init__.py  fs.py
