[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepenc"
version = "1.0.0"
description = "Python 项目加密分发框架 - 一个简洁、强大的 Python 项目加密分发框架"
readme = "README.md"
license = "MIT"
authors = [
    {name = "liwenju0", email = "liwenjudetiankong@126.com"}
]
maintainers = [
    {name = "liwenju0", email = "liwenjudetiankong@126.com"}
]
keywords = ["encryption", "distribution", "python", "security", "onnx"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"
dependencies = [
    "pycryptodome>=3.15.0",
    "pathlib2>=2.3.0; python_version < '3.4'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/liwenju0/deepenc"
Documentation = "https://deepenc.readthedocs.io/"
Repository = "https://github.com/liwenju0/deepenc.git"
"Bug Tracker" = "https://github.com/liwenju0/deepenc/issues"
"Release Notes" = "https://github.com/liwenju0/deepenc/releases"

[project.scripts]
deepenc = "deepenc.cli.main:main"

[project.gui-scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = [
    "tests*",
    "test_*",
    "examples*",
    "docs*",
    ".git*",
    ".cursor*",
    "build*",
    "dist*",
    "*.egg-info*",
]

[tool.setuptools.package-data]
"deepenc" = ["*.py", "*.md", "*.txt"]
"deepenc.core" = ["*.so", "*.pyd", "*.dll", "*.dylib"]

[tool.setuptools.exclude-package-data]
"*" = [
    "*.pyc",
    "*.pyo",
    "*.pyd",
    "__pycache__",
    "*.dll",
    "*.dylib",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
